# FasterSwiper

./: .bazelrc  .gitignore  ATTRIBUTION.md  MODULE.bazel  README.md  stamp.sh
.github/workflows/: release.yml
src/: BUILD  BUILD.bazel  c-api.cc  c-api.h  cf-util.cc  cf-util.h  channel.h  channel_test.cc  const.h  easing-functions.cc  easing-functions.h  event-tap-manager.cc  event-tap-manager.h  event.cc  event.h  gesture-controller.cc  gesture-controller.h  macos-private.h  periodic-timer.cc  periodic-timer.h  space-state.cc  space-state.h  space-switcher.cc  space-switcher.h  status-macros.h  string-util.h  swipe-animator.cc  swipe-animator.h
src/app/: BUILD  FasterSwiperApp.swift  FasterSwiperController.swift  Info.plist  SettingsView.swift
src/tools/: BUILD  BUILD.bazel  event-monitor.cc  playback-gesture.cc  record-gesture.cc  show-space-state.cc  stress-test.cc  swipe-animator-test.cc  tap-scratch.cc  timer-test.cc
