module(
    name = "faster-swiper",
    version = "0.1.0",
)

bazel_dep(name = "apple_support", version = "2.5.3")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_apple", version = "4.5.3")
bazel_dep(name = "rules_swift", version = "3.6.1")
bazel_dep(name = "abseil-cpp", version = "20260107.1")
bazel_dep(name = "nlohmann_json", version = "3.12.0.bcr.1")

# Fork for Hedron's Compile Commands Extractor for Bazel.
# Fork: https://github.com/claymaks/bazel-compile-commands-extractor
# Original: https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "818899d71ed956ed41a7c4775e97846df03e8338",
    remote = "https://github.com/claymaks/bazel-compile-commands-extractor.git",
)
